# DRF_NBP_Exchange_Rates

./: .gitignore  Dockerfile  create_superuser.py  docker-compose.yml  pyproject.toml  readme.md
.github/workflows/: azure-webapps-python.yml
djangoProject1/: settings.py  urls.py  wsgi.py
nbp/: apps.py  models.py  serializers.py  urls.py  views.py
nbp/management/commands/: clear_db.py
nbp/migrations/: 0001_initial.py  0002_delete_question.py  0003_initial.py  0004_rename_exchangeratea_exchangerate.py  0005_alter_exchangerate_unique_together.py
